--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -56,7 +56,7 @@
 }
 
 @font-face {
-  font-family: 'EssentialIcons';
+  font-family: 'EssentialIconsV2';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -64,7 +64,7 @@
 }
 
 @font-face {
-  font-family: 'FilmIndustryIcons';
+  font-family: 'FilmIndustryIconsV2';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -72,7 +72,7 @@
 }
 
 @font-face {
-  font-family: 'GadgetIcons';
+  font-family: 'GadgetIconsV2';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -80,7 +80,7 @@
 }
 
 @font-face {
-  font-family: 'UiconsThinStraight';
+  font-family: 'UiconsThinStraightV2';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
